fix: resolve font rendering issues on ios

--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -3,7 +3,7 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url('./fonts/CascadiaCodePL.woff2') format('woff2');
+	src: url('./fonts/CascadiaCodePL.woff2') format('woff2-variations');
 	font-variant-alternates: styleset('ss01') styleset('ss02') styleset('ss03') styleset('ss19') styleset('ss20');
 	font-variant-ligatures: common-ligatures contextual;
 }
@@ -13,7 +13,7 @@
 	font-style: italic;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url('./fonts/CascadiaCodePLItalic.woff2') format('woff2');
+	src: url('./fonts/CascadiaCodePLItalic.woff2') format('woff2-variations');
 	font-variant-alternates: styleset('ss01') styleset('ss02') styleset('ss03') styleset('ss19') styleset('ss20');
 	font-variant-ligatures: common-ligatures contextual;
 }
@@ -23,7 +23,7 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url('./fonts/Selawik-variable.woff2') format('woff2');
+	src: url('./fonts/Selawik-variable.woff2') format('woff2-variations');
 	font-variant-ligatures: none;
 }
 
